Bugs squashed. Final commit.

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #2b88f0;
+    background-color: #e28743;
     font-family: 'M PLUS 1 Code', sans-serif;
     display: flex;
     flex-direction: column;
@@ -42,7 +42,7 @@ textarea:focus {
 }
 
 .tag {
-    background-color: #f0932b;
+    background-color: #5f9afa;
     color: white;
     border-radius: 50px;
     padding: 10px 20px;
